# NANO_SERVER

./: README.md  backup  diagram.drawio  frame.raw  import socket.py  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  NANOSERVER.c  hello_world_main.c  index.html  index_back.html
